TMF622-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tmf622
  name: tmf622
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tmf622
  sessionAffinity: None
  type: ClusterIP
