TMF622-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tmf622
  name: tmf622
spec:
  port:
    targetPort: http
  wildcardPolicy: None
  to:
    kind: Service
    name: tmf622
